--- a/BoardGamePlaylist_MVC/Views/BoardGame/Delete.cshtml
+++ b/BoardGamePlaylist_MVC/Views/BoardGame/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
+            @Html.DisplayNameFor(model => model.PlayOrder)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.PlayOrder)
+        </dd>
+        <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
         <dd>
@@ -48,7 +54,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" />
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Back to List |", "Index")
         </div>
     }
 </div>
